# turbo-historical

./: .gitignore  .gitmodules  Cargo.toml  README.md  migrations.toml  test.migrations.toml
.github/workflows/: scrapertest.yml
docs/: UPDATING.go.md
monolith_wrapper/: Cargo.toml
monolith_wrapper/src/: lib.rs
scrapertest/: Cargo.toml  build.rs
scrapertest/src/: main-monolith.rs  main.rs  mod_i53.rs
turbo-in-new-tab/: background.js  manifest.json
turbo_frontend/: apollo.config.js  generated-queries.graphql  graphql.schema  graphql.schema.json  package-lock.json  package.json  queries-plugin.js  run-codegen.mjs  tailwind.config.js  tsconfig.json
turbo_frontend/public/: index.html
turbo_frontend/src/: App.tsx  graphql-codegen.ts  icons.tsx  index.tsx  tailwind.css
turbosql/: Cargo.toml  README.md
turbosql/src/: lib.rs
turbosql/tests/: integration_test.rs
turbosql_examples/: Cargo.toml
turbosql_examples/src/: main.rs
turbosql_macros/: Cargo.toml
turbosql_macros/src/: create.rs  insert.rs  lib.rs  select.rs
