[package]
authors = ["Eden <rust@eden2.com>"]
edition = "2018"
name = "scrapertest"
publish = false
version = "0.0.0"

[dependencies]
# ammonia = {path = "../ammonia"}
# html5ever = "0.24.1"
# maplit = "1.0.2"
anyhow = "1.0.34" 
bytes = "=0.5.6" # 0.6 is part of tokio 0.3 ecosystem
clap = "=3.0.0-beta.2" 
directories-next = "2.0.0" 
futures = "=0.3.8" 
headers = "0.3.2" 
juniper = {git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"} 
juniper_subscriptions = {git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"} 
juniper_warp = {git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"} 
log = "0.4.11" 
mime_guess = "2.0.3" 
once_cell = "1.5.2" 
pretty_env_logger = "0.4.0" 
regex = "1.4.2" 
reqwest = "0.10.9" 
rust-embed = "5.6.0" 
scraper = "0.12.0" 
serde = {version = "1.0.117", features = ["derive"]} 
serde_json = "1.0.59" 
sysinfo = "0.15.3" 
tokio = {version = "=0.2.23", features = ["full"]} 
# tokio 0.3 requires ecosystem support
tokio-util = {version = "=0.3.1", features = ["codec"]}
# tokio-util 0.4+ is part of tokio 0.3 ecosystem
turbosql = {path = "../turbosql"}
url = "2.2.0"
urlencoding = "1.1.1"
ux = {git = "https://github.com/1aim/uX", rev = "e17f5565d27bb4c1ebfd408329c7c075c58f0a0a", features = ["serde"]}
warp = {version = "0.2.5", features = ["tls"]}
