[package]
authors = ["Eden <rust@eden2.com>"]
categories = ["database"]
description = "Easy data persistence layer, backed by SQLite"
edition = "2018"
keywords = ["sqlite", "sql"]
license = "MIT OR Apache-2.0"
name = "turbosql"
publish = false
readme = "README.md"
repository = "https://github.com/trevyn/turbosql"
version = "0.0.0"

[dependencies]
anyhow = "1.0.32"
log = "0.4.11"
once_cell = "1.4.1"
rusqlite = {version = "0.24.0", features = ["bundled", "blob"]}
serde = {version = "1.0.116", features = ["derive"]}
turbosql_macros = {version = "=0.0.0", path = "../turbosql_macros"}
